Simplify into simple project. Aspectj cant load from top project level. Other problems.
I wanted to reproduce exactly the setup I have internally but somehow in this
sample I can't really call the aspectj runner from the top level root project.
It is exactly the same as I have internally, but there it works. No idea why.

Anyway, other problems:

Using https, the app reloads after accepting the certificate and kamon stops 
reporting stuff.

[minimal-kamon] $ aspectj-runner:run -Dhttps.port=9001 -Dhttp.port=disabled -Dconfig.file=conf/application.conf